[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthetic_functions"
version = "0.0.1"
authors = [
  { name="Sang T. Truong", email="sttruong@stanford.edu" },
  { name="Duc Q. Nguyen", email="nqduc@stanford.edu" },
]
description = "A small package providing a function for embedding extraction"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "torch>=1.8.2",
    "numpy>=1.19.5",
    "scipy>=1.3.2",
    "matplotlib>=3.1.2"
]

[project.urls]
Homepage = "https://github.com/sangttruong/synthetic_functions"

[tool.hatch.build.targets.wheel]
      packages = ["src/synthetic_functions"]